# cycletourmap

./: .env.sample  .gitignore  .graphqlconfig.yml  README.md  docker-compose.yml  flow.mmd  index.html  package-lock.json  package.json  package.json.bak  pyproject.toml  quokka_testing.js  vue.config.js
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
backend/: Dockerfile  schema.sql  tusker.toml
backend/config/: settings.py  urls.py
backend/migrations/: 001-create-tables.sql  002-user-functions.sql  003-update-current-user-id.sql  004-add-rls.sql  005-fk-index.sql  006-cols-update.sql
prisma/: schema.prisma
public/: index.html  site.webmanifest
src/: App.vue  main.js
src/components/: Auth.vue  AuthStrava.vue  Buttons.vue  Error404.vue  FutureFeatures.vue  GettingStarted.vue  Home.vue  HomeWrapper.vue  Input.vue  LTileLayerGooglemutant.vue  Leaflet.vue  LeafletData.vue  Map.vue  Mapbox.vue  Nav.vue  Popups.vue  PrivacyPolicy.vue  Profile.vue  ProfileNav.vue  Rides.vue  Strava.vue  StravaData.vue  Summary.vue  SupportMe.vue  Tabulator.vue  Toggle.vue  ViewNav.vue  Vue2LeafletFullscreen.vue  Vuetable.vue  VuetifyTable.vue
src/gql/: activityFragment.gql  createActivities.gql  createActivity.gql  createAthlete.gql  createAuth.gql  createTour.gql  deleteActivity.gql  deleteTour.gql  getTour.gql  getTourActivities.gql  getTourAuth.gql  input.json  listAthleteAuth.gql  listAthletes.gql  listAuths.gql  listAuthsAthletes.gql  listTours.gql  updateActivity.gql  updateAthlete.gql  updateAuth.gql  (+1 more)
(+142 files in other folders)
